# krautsalat.xyz

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.example.yml  hypercorn.dev.toml  hypercorn.toml  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  run.py  tailwind.config.js
.github/workflows/: container.yaml
app/: __init__.py  api.py  auth.py  documents.py  models.py  schemas.py  tasks.py  utils.py
app/home/: __init__.py  api.py
app/home/templates/: index.html  page_about.html  post_add.html
app/home/templates/partials/: part_contact.html  part_contact_success.html  part_short_add.html
app/static/css/: main.css
app/static/js/: alpine-tags.js  htmx-1.8.6.min.js
app/templates/: _base.html  login.html
app/utils/: auth.py  caching.py  quartparser.py  tasks.py
config/: __init__.py  entry_arq.sh  entry_hypercorn.sh  entrypoint.sh  hypercorn.toml
static/css/: main.css
templates/: _base.html
